avance con pre post y modificaciones simples de complejidades

--- a/aed2-dis.sty
+++ b/aed2-dis.sty
@@ -114,3 +114,6 @@
   \tadOperacion{Abs}{#1/#3}{#2}{Rep($#3$)}%
   \tadAxioma{Abs($#3$)}{#4}%
 }%
+
+\newcommand\pre{\textbf{Pre}}
+\newcommand\post{\textbf{Post}}
