--- a/modulos/modulo_juego.tex
+++ b/modulos/modulo_juego.tex
@@ -946,6 +946,14 @@ Utilizaremos la misma notación para complejidades que en el enunciado:
 		}
 	\end{algorithm}
 
+	\complejidad: $O(\#j)$
+	%TODO
+	\justifcomp: 
+
+	\pre:
+
+	\post:
+
 	~
 
 	\begin{algorithm}[H]
@@ -960,6 +968,14 @@ Utilizaremos la misma notación para complejidades que en el enunciado:
 			i $\leftarrow$ i + 1\OdeLinea{1}
 		}
 	\end{algorithm}
+
+	\complejidad: $O(\#j)$
+	%TODO
+	\justifcomp: 
+
+	\pre:
+
+	\post:
 
 	~
 
@@ -979,6 +995,8 @@ Utilizaremos la misma notación para complejidades que en el enunciado:
 	\complejidad: $O(\#j)$
 
 	\justifcomp: como la lista de jugadores y la de eliminados son la misma, debe revisarla en su totalidad hasta encontrar otro elemento válido.
+	%TOOD
+	\pre:
 
-
+	\post:
 \end{Algoritmos}
