aguante lisp vieja no me importa nada

--- a/modulos/modulo_juego.tex
+++ b/modulos/modulo_juego.tex
@@ -395,6 +395,10 @@ Utilizaremos la misma notación para complejidades que en el enunciado:
 
 	\justifcomp: solo se inicializan las variables
 	
+	\pre: true
+
+	\post: %TODO
+
 	~
 
 	\begin{algorithm}[H]
@@ -412,6 +416,10 @@ Utilizaremos la misma notación para complejidades que en el enunciado:
 
 	\justifcomp: solo se inicializan las variables.
 
+	\pre: true
+	
+	\post: %TODO
+	
 	~
 
 	\begin{algorithm}[H]
